2.3/2.3-fixed/k8s-exercises/service-log-output.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
