2.3/2.3-fixed/k8s-exercises/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  selector:
    app: pingpong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
