2.3/2.3-fixed/k8s-exercises/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: exercises
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /log(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: log-output-svc
            port:
              number: 80

      - path: /pingpong(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pingpong-svc
            port:
              number: 80
